--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity" />
-        <activity android:name=".Occupancies"></activity>
+        <activity android:name=".Occupancies" />
+        <activity android:name=".Registration"></activity>
     </application>
 
 </manifest>
